--- a/atomize/build.gradle
+++ b/atomize/build.gradle
@@ -1,9 +1,9 @@
-apply plugin: 'android-sdk-manager'
+//apply plugin: 'android-sdk-manager'
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.3"
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
@@ -11,9 +11,9 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.nicdahlquist.pngquant"
-        minSdkVersion 18
-        targetSdkVersion 21
+        applicationId "org.frap129"
+        minSdkVersion 21
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
