--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,10 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0'
-        classpath 'com.android.tools.build:gradle:1.0.0'
+        repositories {
+            maven { url 'https://jitpack.io' }
+        }
+        classpath 'com.android.tools.build:gradle:2.1.0'
     }
 }
 
