--- a/atomize/src/main/AndroidManifest.xml
+++ b/atomize/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Material.Settings">
+        android:theme="@android:style/Theme.Material">
 
         <activity
             android:name=".MainActivity"
@@ -18,6 +18,15 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+
+        <activity
+            android:name=".BrowsePictureActivity"
+            android:parentActivityName="org.frap129.atomize.MainActivity" >
+        <meta-data
+            android:name="android.support.MainActivity"
+            android:value="org.frap129.atomize.BrowsePictureActivity" />
 
         </activity>
 
