--- a/atomize/src/main/AndroidManifest.xml
+++ b/atomize/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_atom"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Material">
 
