Removed JPG resize and settings, fixed filetype and on device checks

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         <activity
             android:name=".intro.IntroActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/IntroTheme"></activity>
+            android:theme="@style/IntroTheme"/>
     </application>
 
 </manifest>
