Replace buttons with FABs
Signed-off-by: Joe Maples <joe@frap129.org>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'id.zelory:compressor:1.0.3'
     compile 'com.github.paolorotolo:appintro:3.4.0'
     compile 'us.feras.mdv:markdownview:1.1.0'
+    compile 'com.android.support:design:25.0.0'
 }
