--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId "com.wrmndfzzy.atomize"
         minSdkVersion 21
@@ -23,15 +22,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support:design:26.+'
-    testCompile 'junit:junit:4.12'
-    compile project(':pngquant-android')
-    compile 'id.zelory:compressor:1.0.3'
-    compile 'com.github.paolorotolo:appintro:3.4.0'
-    compile 'us.feras.mdv:markdownview:1.1.0'
+    implementation 'com.android.support:appcompat-v7:26.+'
+    implementation 'com.android.support:design:26.+'
+    testImplementation 'junit:junit:4.12'
+    implementation project(':pngquant-android')
+    implementation 'id.zelory:compressor:1.0.3'
+    implementation 'com.github.paolorotolo:appintro:3.4.0'
+    implementation 'us.feras.mdv:markdownview:1.1.0'
 }
