--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 28
     buildToolsVersion "29.0.3"
 
     defaultConfig {
@@ -29,8 +29,9 @@ android {
 dependencies {
     implementation files('libs/pngquant-android-release.aar')
 
-    implementation 'com.android.support:appcompat-v7:26.+'
-    implementation 'com.android.support:design:26.+'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
 
     //https://github.com/zetbaitsu/Compressor
     implementation 'id.zelory:compressor:1.0.3'
