--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,8 @@ android {
 dependencies {
     implementation files('libs/pngquant-android-release.aar')
 
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.1.0'
 
     //https://github.com/zetbaitsu/Compressor
     implementation 'id.zelory:compressor:1.0.3'
