Exclude meta-inf from packaging

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,6 @@
-[submodule "pngquant-android/src/main/jni/pngquant-android"]
-	path = pngquant-android/src/main/jni/pngquant-android
-	url = https://github.com/wrmndfzzy/pngquant-android.git
-
+#[submodule "pngquant-android/src/main/jni/pngquant-android"]
+#	path = pngquant-android/src/main/jni/pngquant-android
+#	url = https://github.com/wrmndfzzy/pngquant-android.git
 
 #[submodule "pngquant-android/src/main/jni/libpng-android"]
 #	path = pngquant-android/src/main/jni/libpng-android
